--- a/1.html
+++ b/1.html
@@ -37,7 +37,7 @@
         <script>
                 function card1()
 	        {
-			document.getElementById('card1').src='시작해볼까.png';
+			document.getElementById('card1').src='102.png';
 		}
 
         </script>
